--- a/Organiza tu armario/css/verano.css
+++ b/Organiza tu armario/css/verano.css
@@ -6,24 +6,32 @@
 button{
     color:black;
     background-color: #d8d8d4;
-    border: 0;
     font-family: "Quicksand", serif;
     font-size: 20px;
-    border-radius: 10px;
+    border-radius: 20px !important;
     text-align:center;
-    padding: 5px;
-    margin: 5px, 5;
-    width: 15%;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+   
 }
 
+.titolPetit{
+   font-size: 20px;
+   color: #e6b0aa ;
 
+}
+button:hover{
+    transform: scale(1.1);
+}
 
 h1{
     font-size: 80%;
 }
 
 img{
-    width: 10%;
+    width: 40%;
    
 }
 
